	PR c++/28256 	* decl.c (check_initializer): Check for 1 initializer on scalar types. 	* g++.dg/init/brace2.C: Change expected error message, add empty init.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115856 138bc75d-0d04-0410-961f-82ee72b054a4